# oddity-rtsp

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yaml  ci.yml
_LEGACY_oddity-rtsp-server/: Cargo.toml
_LEGACY_oddity-rtsp-server/src/: link.rs  settings.rs
_LEGACY_oddity-rtsp-server/src/media/: controller.rs  mod.rs
_LEGACY_oddity-rtsp-server/src/media/session/: mod.rs  session.rs
_LEGACY_oddity-rtsp-server/src/media/source/: mod.rs  reader.rs  source.rs
_LEGACY_oddity-rtsp-server/src/net/: conn.rs  handle.rs  mod.rs
concurrency/: Cargo.toml
concurrency/src/: broadcast.rs  channel.rs  lib.rs  net.rs  service.rs  service_pool.rs  stop.rs
docker/: Dockerfile  config-example.yaml
oddity-protocol-rtsp/: Cargo.toml
oddity-protocol-rtsp/src/: buffer.rs  codec.rs  error.rs  lib.rs  message.rs  parse.rs  serialize.rs  write.rs
oddity-rtsp-parser/src/: error.rs  lib.rs  parse.rs  reader.rs  request.rs
oddity-rtsp-protocol/: Cargo.toml
oddity-rtsp-protocol/src/: buffer.rs  codec.rs  error.rs  interleaved.rs  io.rs  lib.rs  message.rs  parse.rs  range.rs  request.rs  response.rs  rtp_info.rs  serialize.rs  tokio.rs  transport.rs
oddity-rtsp-server/: Cargo.toml  config.yaml
oddity-rtsp-server/src/: app.rs  conn.rs  connection.rs  lib.rs  link.rs  main.rs  media.rs  multiplexer.rs  server.rs  session.rs  settings.rs  transmux.rs  transport.rs  worker.rs
oddity-rtsp-server/src/app/: config.rs  handler.rs  mod.rs
oddity-rtsp-server/src/conn/: conn.rs  handle.rs  reader.rs  writer.rs
oddity-rtsp-server/src/media/: controller.rs  descriptor.rs  error.rs  mod.rs  multiplex.rs  multiplexer.rs  sdp.rs  session.rs  source.rs
oddity-rtsp-server/src/media/session/: context.rs  id.rs  mod.rs  session.rs  transport.rs
oddity-rtsp-server/src/media/source/: comm.rs  mod.rs  msg.rs  reader.rs  source.rs
oddity-rtsp-server/src/media/video/: mod.rs  reader.rs  rtp_muxer.rs
oddity-rtsp-server/src/net/: conn.rs  connection.rs  connection_manager.rs  handle.rs  handler.rs  mod.rs  reader.rs  server.rs  writer.rs
oddity-rtsp-server/src/runtime/: mod.rs  task_manager.rs
oddity-rtsp-server/src/session/: context.rs  id.rs  mod.rs  session.rs  session_manager.rs  setup.rs  transport.rs
oddity-rtsp-server/src/source/: mod.rs  source.rs  source_manager.rs
oddity-sdp-protocol/: Cargo.toml
oddity-sdp-protocol/src/: codec.rs  fmt.rs  ip.rs  lib.rs  sdp.rs  time.rs  timing.rs
