[package]
name = "oddity-rtsp-protocol"
version = "0.1.0"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
http = "1.0"
bytes = { version = "1" }
tokio-util = { version = "0.7", default-features = false, features = [
    "codec",
], optional = true }

[features]
default = ["tokio-codec"]
tokio-codec = ["tokio-util"]

