[package]
name = "oddity-rtsp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
rand = "0.8"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-util = { version = "0.7.1", default-features = false, features = ["codec"] }
oddity-rtsp-protocol = { path = "../oddity-rtsp-protocol", features = ["tokio-codec"] }
oddity-sdp-protocol = { path = "../oddity-sdp-protocol" }
oddity-video = { path = "../../oddity-engine-next/oddity-video" } # Fix this weird dep path